# PINN_optical_resonator

./: .gitignore  pyproject.toml
src/: SA.py  main.py  parameters.py  pinn.py  plotting.py  ssf_solver.py  train.py  utils.py
tests/: README.md  SA.py  main.py  parameters.py  pinn.py  plotting.py  ssf_solver.py  train.py  utils.py
